--- a/index.html
+++ b/index.html
@@ -1,101 +1,86 @@
 <!DOCTYPE html>
-    <html lang="fa">
-
-    
+<html lang="fa">
 <head>
-        <meta charset="utf-8" />   <title>خرید vpn v2makers</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="با خرید VPN از ما، از اینترنت بدون محدودیت و با سرعت بالا بهره‌مند شوید. اتصال امن و رمزگذاری‌شده به همراه پشتیبانی ۲۴/۷ برای حفظ حریم خصوصی و دسترسی آزاد شما فراهم است." />
-        <meta name="keywords" content="خرید VPN پرسرعت, خرید VPN ارزان, خرید VPN با IP ثابت, بهترین VPN, خرید وی پی ان نامحدود, VPN برای دور زدن تحریم, VPN برای بازی آنلاین, VPN امن و پرسرعت, VPN با سرورهای مختلف, خرید فیلترشکن حرفه‌ای, خرید وی پی ان با پشتیبانی, خرید فیلترشکن خارجی, خرید VPN برای اندروید و iOS, خرید VPN برای ویندوز و مک, VPN با دسترسی به سایت‌های مسدود شده" />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
-        <meta name="Version" content="v1.8" />
-        <!-- favicon -->
-        <link rel="shortcut icon" href="images/favicon.ico">
-        <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <!-- tobii css -->
-        <link href="css/tobii.min.css" rel="stylesheet" type="text/css" />
-        <!-- Icons -->
-        <link href="css/materialdesignicons.min.css" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="unicons.iconscout.com/release/v3.0.6/css/line.css">
-        <!-- Slider -->               
-        <link rel="stylesheet" href="css/tiny-slider.css"/> 
-        <!-- Main Css -->
-        <link href="css/style.min.css" rel="stylesheet" type="text/css" id="theme-opt" />
-        <link href="css/colors/default.css" rel="stylesheet" id="color-opt">
-        <style>
-.responsive {
-  width: 100%;
-  height: auto;
-}
-</style>
-    </head>
+    <meta charset="utf-8" />
+    <title>خرید VPN | v2makers</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="با خرید VPN از ما، از اینترنت بدون محدودیت و با سرعت بالا بهره‌مند شوید. اتصال امن و رمزگذاری‌شده به همراه پشتیبانی ۲۴/۷ برای حفظ حریم خصوصی و دسترسی آزاد شما فراهم است.">
+    <meta name="keywords" content="خرید VPN پرسرعت, خرید VPN ارزان, خرید VPN با IP ثابت, بهترین VPN, خرید وی پی ان نامحدود, VPN برای دور زدن تحریم, VPN برای بازی آنلاین, VPN امن و پرسرعت, VPN با سرورهای مختلف, خرید فیلترشکن حرفه‌ای, خرید وی پی ان با پشتیبانی, خرید فیلترشکن خارجی, خرید VPN برای اندروید و iOS, خرید VPN برای ویندوز و مک, VPN با دسترسی به سایت‌های مسدود شده">
+    <meta name="author" content="Mehdi Molahi Moghadam" />
+    <meta name="reply-to" content="info@v2net.shop" />
+    <meta name="website" content="https://v2net.shop/" />
+    <meta name="version" content="v1.8" />
 
-    <body>
-        <!-- Loader -->
-        <!-- <div id="preloader">
-            <div id="status">
-                <div class="spinner">
-                    <div class="double-bounce1"></div>
-                    <div class="double-bounce2"></div>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+
+    <!-- CSS Files -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/tobii.min.css" rel="stylesheet">
+    <link href="css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://unicons.iconscout.com/release/v3.0.6/css/line.css" rel="stylesheet">
+    <link href="css/tiny-slider.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet" id="theme-opt">
+    <link href="css/colors/default.css" rel="stylesheet" id="color-opt">
+
+    <style>
+        .responsive {
+            width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+
+<body>
+    <!-- Header -->
+    <header id="topnav" class="defaultscroll sticky">
+        <div class="container">
+            <div>
+                <a class="logo" href="index.html">
+                    <img src="images/logo-dark.png" height="24" alt="لوگو v2makers">
+                </a>
+            </div>
+
+            <div class="buy-button">
+                <a href="index.html#tarefeh" class="btn btn-primary">خرید آنلاین و تحویل آنی سرویس</a>
+            </div>
+
+            <div class="menu-extras">
+                <div class="menu-item">
+                    <a class="navbar-toggle" id="isToggle" onclick="toggleMenu()">
+                        <div class="lines">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </a>
                 </div>
             </div>
-        </div> -->
-        <!-- Loader -->
 
-        <!-- Navbar STart -->
-        <header id="topnav" class="defaultscroll sticky">
-            <div class="container">
-                <!-- Logo container-->
-                <div>
-                    <a class="logo" href="index.html">
-                        <img src="images/logo-dark.png" height="24" alt="">
-                    </a>
-                </div>                 
-                <div class="buy-button">
-<a href="index.html#tarefeh" class="btn btn-primary">خرید آنلاین و تحویل آنی سرویس</a>
-                </div><!--end login button-->
-                <!-- End Logo container-->
-                <div class="menu-extras">
-                    <div class="menu-item">
-                        <!-- Mobile menu toggle-->
-                        <a class="navbar-toggle" id="isToggle" onclick="toggleMenu()">
-                            <div class="lines">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                        </a>
-                        <!-- End mobile menu toggle-->
-                    </div>
+            <div id="navigation">
+                <ul class="navigation-menu">
+                    <li><a href="index.html" class="sub-menu-item">صفحه اصلی</a></li>
+                    <li class="has-submenu parent-menu-item">
+                        <a href="javascript:void(0)">آموزش</a><span class="menu-arrow"></span>
+                        <ul class="submenu">
+                            <li><a href="android.html" class="sub-menu-item">آموزش نصب اندروید</a></li>
+                            <li><a href="ios.html" class="sub-menu-item">آموزش نصب آیفون</a></li>
+                            <li><a href="windows.html" class="sub-menu-item">آموزش نصب ویندوز</a></li>
+                            <li><a href="modem.html" class="sub-menu-item">آموزش نصب مودم</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="reseller.html" class="sub-menu-item">درخواست نمایندگی</a></li>
+                    <li><a href="panel.html" class="sub-menu-item">درخواست پنل و ربات فروشگاهی</a></li>
+                </ul>
+                <div class="buy-menu-btn d-none">
+                    <a href="index.html#tarefeh" class="btn btn-primary">خرید آنلاین و تحویل آنی سرویس</a>
                 </div>
-        
-                <div id="navigation">
-                    <!-- Navigation Menu-->   
-                    <ul class="navigation-menu">
-                        <li><a href="index.html" class="sub-menu-item">صفحه اصلی </a></li>
-                        <li class="has-submenu parent-menu-item">
-                            <a href="javascript:void(0)">آموزش </a><span class="menu-arrow"></span>
-                            <ul class="submenu">
-                                <li><a href="android.html" class="sub-menu-item">آموزش نصب اندروید </a></li>
-                                <li><a href="ios.html" class="sub-menu-item">آموزش نصب آیفون </a></li>
-                                <li><a href="windows.html" class="sub-menu-item">آموزش نصب ویندوز </a></li>
-                                <li><a href="modem.html" class="sub-menu-item">آموزش نصب مودم </a></li>
-                            </ul>
-                        </li>
-						<li><a href="reseller.html" class="sub-menu-item">درخواست نمایندگی </a></li>
-						<li><a href="panel.html" class="sub-menu-item">درخواست پنل و ربات فروشگاهی</a></li>
-                    </ul><!--end navigation menu-->
-                    <div class="buy-menu-btn d-none">
-                        <a href="index.html#tarefeh" class="btn btn-primary">خرید آنلاین و تحویل آنی سرویس</a>
-                    </div><!--end login button-->
-                </div><!--end navigation-->
-            </div><!--end container-->
-        </header><!--end header-->
-        <!-- Navbar End -->
-        <!-- Hero Start -->
+            </div>
+        </div>
+    </header>
+    <!-- Header End -->
+
+    <!-- Hero Section -->
         <section class="bg-half-170 border-bottom agency-wrapper d-table w-100" id="home">
             <div class="container">
                 <div class="row align-items-center">
