--- a/android.html
+++ b/android.html
@@ -6,10 +6,6 @@
         <meta charset="utf-8" />   <title>خرید vpn v2makers - آموزش نصب اندروید</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="در این صفحه، آموزش نصب VPN در اندروید توسط v2makers ارائه شده است. با استفاده از این آموزش، می‌توانید به سادگی VPN را روی دستگاه خود نصب کنید و با حفظ حریم خصوصی، به اینترنت متصل شوید." />
-        <meta name="keywords" content="نصب VPN, VPN در اندروید, راهنمای نصب, اتصال به VPN, امنیت آنلاین, حریم خصوصی, برنامه VPN, تنظیمات VPN, دور زدن محدودیت‌ها, شبکه خصوصی مجازی, اندروید, نرم‌افزار VPN, دسترسی امن به اینترنت, پروتکل‌های VPN, مرور ایمن" />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
         <meta name="Version" content="v1.8" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -168,7 +164,7 @@
                             <div class="mt-4">
 <a href="index.html#tarefeh" class="btn btn-primary mt-4">مشاهده تعرفه ها</a>
 <a href="https://t.me/v2makers_admin" class="btn btn-primary mt-4">ارتباط با ما در تلگرام</a>
-<a href="https://t.me/v2makers_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
+<a href="https://t.me/v2makers2_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
 
 
                             </div>
