--- a/ios.html
+++ b/ios.html
@@ -6,10 +6,6 @@
         <meta charset="utf-8" />   <title>خرید vpn v2makers - آموزش نصب آیفون</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="آموزش نصب V2rayNG در آیفون برای دسترسی به اینترنت آزاد و امن. خرید VPN و راه‌اندازی آسان با استفاده از این راهنما." />
-        <meta name="keywords" content="نصب V2rayNG در آیفون, خرید VPN, آموزش V2rayNG, VPN برای آیفون, راه‌اندازی V2ray, اینترنت امن در آیفون, دسترسی به اینترنت آزاد" />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
         <meta name="Version" content="v1.8" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -165,7 +161,7 @@
                             <div class="mt-4">
 <a href="index.html#tarefeh" class="btn btn-primary mt-4">مشاهده تعرفه ها</a>
 <a href="https://t.me/v2makers_admin" class="btn btn-primary mt-4">ارتباط با ما در تلگرام</a>
-<a href="https://t.me/v2makers_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
+<a href="https://t.me/v2makers2_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
 
 
                             </div>
