--- a/modem.html
+++ b/modem.html
@@ -6,10 +6,6 @@
         <meta charset="utf-8" />   <title>خرید vpn v2makers - آموزش نصب مودم</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="آموزش جامع نصب v2rayNG روی مودم؛ راهنمای گام‌به‌گام برای فعال‌سازی و تنظیم v2rayNG بر روی مودم‌های مختلف جهت دسترسی ایمن و بدون محدودیت به اینترنت. مناسب برای کاربران مبتدی تا حرفه‌ای." />
-        <meta name="keywords" content="آموزش نصب v2rayNG روی مودم, نصب v2rayNG, v2rayNG روی مودم, راهنمای نصب v2rayNG, تنظیم v2rayNG روی مودم, نصب v2ray روی مودم, آموزش تنظیمات v2ray, اینترنت امن با v2ray" />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
         <meta name="Version" content="v1.8" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -148,7 +144,7 @@
 							<img src="img/23.png" alt="خرید vpn پرسرعت">
 							<p>۷- روی دکمه From Share URL کلیک کنید 👇</p>
 							<img src="img/24.png" alt="vpn">
-							<p>۸ -اشتراکی که از ربات <a href="https://t.me/v2makers_bot"><strong>@v2MakersBot</strong></a> خریداری کردین (یا اشتراک تست رایگان) رو اینجا Paste کنید و روی OK کلیک کنید.</p>
+							<p>۸ -اشتراکی که از ربات <a href="https://t.me/v2makers2_bot"><strong>@v2MakersBot</strong></a> خریداری کردین (یا اشتراک تست رایگان) رو اینجا Paste کنید و روی OK کلیک کنید.</p>
 							<img src="img/25.png" alt="آموزش نصب v2rayng در مودم">
 							<p>۹ &#8211; روی Save &amp; Apply کلیک کنید.</p>
 							<img src="img/26.png" alt="خرید vpn قوی">
@@ -181,7 +177,7 @@
 							                            <div class="mt-4">
 <a href="index.html#tarefeh" class="btn btn-primary mt-4">مشاهده تعرفه ها</a>
 <a href="https://t.me/v2makers_admin" class="btn btn-primary mt-4">ارتباط با ما در تلگرام</a>
-<a href="https://t.me/v2makers_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
+<a href="https://t.me/v2makers2_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
 
 
                             </div>
