--- a/panel.html
+++ b/panel.html
@@ -6,10 +6,6 @@
         <meta charset="utf-8" />   <title>خرید vpn v2makers - پنل و ربات تلگرام v2rayng</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="ارائه خدمات پنل حرفه‌ای V2RayNG و ربات تلگرام فروشگاهی با v2makers. ساده‌ترین راه برای مدیریت و فروش اشتراک VPN و فیلترشکن از طریق پنل V2Ray و ربات تلگرامی فروشگاهی. امن، سریع و کاربردی." />
-        <meta name="keywords" content="پنل V2Ray, V2RayNG, فروش پنل V2RayNG, v2makers, ربات تلگرام فروشگاهی, ربات تلگرام فروش VPN, مدیریت اشتراک VPN, فروش فیلترشکن, سرویس V2Ray امن, ساخت ربات تلگرام فروشگاهی, فروش اشتراک فیلترشکن, ارائه دهنده V2Ray, خرید V2RayNG, پنل مدیریت V2Ray, فروش فیلترشکن با تلگرام" />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
         <meta name="Version" content="v1.8" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -106,7 +102,7 @@
                             <h1 class="heading mb-3">مدیریت آسان و فروش حرفه‌ای اشتراک VPN با پنل V2RayNG و ربات تلگرام فروشگاهی v2makers!</h1>
                             <p class="para-desc text-muted">با خدمات حرفه‌ای v2makers، به راحتی می‌توانید مدیریت و فروش اشتراک‌های VPN را با پنل پیشرفته V2RayNG و ربات تلگرام فروشگاهی انجام دهید. این سیستم به شما امکان می‌دهد تا به صورت امن، سریع و کاربرپسند، سرویس‌های خود را ارائه دهید و به رشد کسب‌وکارتان کمک کنید. اگر به دنبال روشی ساده و مطمئن برای فروش فیلترشکن و اشتراک VPN هستید، v2makers بهترین انتخاب شماست!</p>
                             <div class="mt-4">
-                                <a href="https://t.me/v2makers_bot" class="btn btn-outline-primary rounded"><i class="uil uil-store"></i> ورود به ربات تلگرام و ارسال تیکت</a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-outline-primary rounded"><i class="uil uil-store"></i> ورود به ربات تلگرام و ارسال تیکت</a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -212,7 +208,7 @@
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>Traffic:	20000 GB /month </li>
 									<li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>ربات تلگرام فروشگاهی رایگان </li>
                                 </ul>
-                                <a href="https://t.me/v2makers_bot" class="btn btn-primary mt-4">تماس با ما </a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-primary mt-4">تماس با ما </a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -233,7 +229,7 @@
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>Traffic:	20000 GB /month </li>
 									<li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>ربات تلگرام فروشگاهی رایگان </li>
                                 </ul>
-                                <a href="https://t.me/v2makers_bot" class="btn btn-primary mt-4">تماس با ما </a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-primary mt-4">تماس با ما </a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -253,7 +249,7 @@
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>Traffic:	20000 GB /month </li>
 									<li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>ربات تلگرام فروشگاهی رایگان </li>
                                 </ul>
-                                <a href="https://t.me/v2makers_bot" class="btn btn-primary mt-4">تماس با ما </a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-primary mt-4">تماس با ما </a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -278,7 +274,7 @@
                             <div class="mt-4">
 <a href="index.html#tarefeh" class="btn btn-primary mt-4">مشاهده تعرفه ها</a>
 <a href="https://t.me/v2makers_admin" class="btn btn-primary mt-4">ارتباط با ما در تلگرام</a>
-<a href="https://t.me/v2makers_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
+<a href="https://t.me/v2makers2_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
 
 
                             </div>
