--- a/reseller.html
+++ b/reseller.html
@@ -6,10 +6,6 @@
         <meta charset="utf-8" />   <title>خرید vpn v2makers - پنل نمایندگی v2rayng</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="نمایندگی V2RayNG v2makers با ارائه بهترین و پایدارترین سرویس‌های اینترنت، مناسب برای عبور از محدودیت‌ها و دسترسی به اینترنت پرسرعت. خرید آسان و پشتیبانی 24/7!" />
-        <meta name="keywords" content="نمایندگی V2RayNG, خرید V2RayNG v2makers, سرویس V2Ray, اینترنت پرسرعت V2Ray, عبور از محدودیت‌ها, خرید V2Ray با کیفیت, خرید VPN V2Ray, پشتیبانی V2RayNG, بهترین سرویس V2Ray, خدمات اینترنت پایدار" />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
         <meta name="Version" content="v1.8" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -106,7 +102,7 @@
                             <h1 class="heading mb-3">نمایندگی v2rayng v2makers با <span class="text-primary typewrite" data-period="2000" data-type='[ "کیفیت بالا" ]'> <span class="wrap"></span> </span> برای همکاران عزیز </h1>
                             <p class="para-desc text-muted">ما به همکاران عزیز خدمات ویژه‌ای ارائه می‌دهیم که شامل نمایندگی v2rayng v2makers می‌شود. این سرویس به شما این امکان را می‌دهد که با کیفیت بالا و امنیت بی‌نظیر به مشتریان خود خدمات VPN ارائه دهید. با استفاده از تکنولوژی v2rayng، می‌توانید تجربه‌ای سریع و امن برای کاربران خود فراهم کنید و به راحتی تنظیمات و پیکربندی‌های لازم را انجام دهید.</p>
                             <div class="mt-4">
-                                <a href="https://t.me/v2makers_bot" class="btn btn-outline-primary rounded"><i class="uil uil-store"></i> ورود به ربات تلگرام و درخواست نمایندگی </a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-outline-primary rounded"><i class="uil uil-store"></i> ورود به ربات تلگرام و درخواست نمایندگی </a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -211,7 +207,7 @@
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>مشاهده تعداد خرید </li>
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>مشاهده موجودی باقیمانده </li>
                                 </ul>
-                                <a href="https://t.me/v2makers_bot" class="btn btn-primary mt-4">ثبت درخواست نمایندگی </a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-primary mt-4">ثبت درخواست نمایندگی </a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -231,7 +227,7 @@
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>مشاهده تعداد خرید </li>
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>مشاهده موجودی باقیمانده </li>
                                 </ul>
-                                <a href="https://t.me/v2makers_bot" class="btn btn-primary mt-4">ثبت درخواست نمایندگی </a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-primary mt-4">ثبت درخواست نمایندگی </a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -250,7 +246,7 @@
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>مشاهده تعداد خرید </li>
                                     <li class="h6 text-muted mb-0"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>مشاهده موجودی باقیمانده </li>
                                 </ul>
-                                <a href="https://t.me/v2makers_bot" class="btn btn-primary mt-4">ثبت درخواست نمایندگی </a>
+                                <a href="https://t.me/v2makers2_bot" class="btn btn-primary mt-4">ثبت درخواست نمایندگی </a>
                             </div>
                         </div>
                     </div><!--end col-->
@@ -275,7 +271,7 @@
                             <div class="mt-4">
 <a href="index.html#tarefeh" class="btn btn-primary mt-4">مشاهده تعرفه ها</a>
 <a href="https://t.me/v2makers_admin" class="btn btn-primary mt-4">ارتباط با ما در تلگرام</a>
-<a href="https://t.me/v2makers_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
+<a href="https://t.me/v2makers2_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
 
 
                             </div>
