--- a/v2rayng.html
+++ b/v2rayng.html
@@ -6,9 +6,6 @@
         <meta charset="utf-8" />   <title>خرید vpn v2makers - خرید اکانت v2rayng</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="اکانت V2rayNG با سرعت بالا، امنیت قوی و سازگاری گسترده. بهترین راه‌حل برای دسترسی به اینترنت آزاد و پایدار. خرید از ویتوری میکرز با پشتیبانی ۲۴ ساعته." />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
         <meta name="Version" content="v1.8" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -130,7 +127,7 @@
 
 <ul>
   <li>🔴ارسال پیام در تلگرام 24 ساعته به آیدی تلگرام: <strong><a href="https://t.me/v2makers_admin" target="_blank">https://t.me/v2makers_admin</a></strong></li>
-  <li>🔴خرید VPN فوری از ربات تلگرام آیدی: <strong><a href="https://t.me/v2makers_bot" target="_blank">https://t.me/v2makers_bot</a></strong></li>
+  <li>🔴خرید VPN فوری از ربات تلگرام آیدی: <strong><a href="https://t.me/v2makers2_bot" target="_blank">https://t.me/v2makers2_bot</a></strong></li>
 </ul>
 
 <h2 id="-خرید-فیلترشکن-v2rayng-سرعت-تضمینی">🔵 خرید فیلترشکن V2rayNG (سرعت تضمینی🚀)</h2>
@@ -149,7 +146,7 @@
 
 <ul>
   <li>🔴ارسال پیام در تلگرام 24 ساعته به آیدی تلگرام: <strong><a href="https://t.me/v2makers_admin" target="_blank">https://t.me/v2makers_admin</a></strong></li>
-  <li>🔴خرید VPN فوری از ربات تلگرام آیدی: <strong><a href="https://t.me/v2makers_bot" target="_blank">https://t.me/v2makers_bot</a></strong></li>
+  <li>🔴خرید VPN فوری از ربات تلگرام آیدی: <strong><a href="https://t.me/v2makers2_bot" target="_blank">https://t.me/v2makers2_bot</a></strong></li>
 </ul>
 
 <p><strong>چرا خرید سرور V2ray؟</strong>
@@ -164,7 +161,7 @@
 
 <ul>
   <li>🔴ارسال پیام در تلگرام 24 ساعته به آیدی تلگرام: <strong><a href="https://t.me/v2makers_admin" target="_blank">https://t.me/v2makers_admin</a></strong></li>
-  <li>🔴خرید VPN فوری از ربات تلگرام آیدی: <strong><a href="https://t.me/v2makers_bot" target="_blank">https://t.me/v2makers_bot</a></strong></li>
+  <li>🔴خرید VPN فوری از ربات تلگرام آیدی: <strong><a href="https://t.me/v2makers2_bot" target="_blank">https://t.me/v2makers2_bot</a></strong></li>
 </ul>
 
 <h3 id="پلن-های-ویژه-ویتوری-پرسرعت">🔴پلن های ویژه ویتوری پرسرعت</h3>
