--- a/windows.html
+++ b/windows.html
@@ -6,10 +6,6 @@
         <meta charset="utf-8" />   <title>خرید vpn v2makers - آموزش نصب ویندوز</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="آموزش کامل نصب V2RayNG در ویندوز: راهنمای گام‌به‌گام برای دانلود، نصب و پیکربندی V2RayNG روی ویندوز جهت دسترسی به اینترنت آزاد و استفاده از پروتکل‌های پیشرفته V2Ray. مناسب برای کاربران مبتدی و حرفه‌ای." />
-        <meta name="keywords" content="آموزش نصب V2RayNG در ویندوز, نصب V2RayNG ویندوز, V2RayNG در ویندوز, راهنمای V2RayNG ویندوز, دانلود V2RayNG ویندوز, پیکربندی V2RayNG, تنظیمات V2RayNG ویندوز, استفاده از V2RayNG, نصب V2Ray در ویندوز, وی تو ری ویندوز, نرم‌افزار V2Ray ویندوز" />
-        <meta name="author" content="Mehdi Molahi Moghadam" />
-        <meta name="email" content="info@v2net.shop" />
-        <meta name="website" content="https://v2net.shop/" />
         <meta name="Version" content="v1.8" />
         <!-- favicon -->
         <link rel="shortcut icon" href="images/favicon.ico">
@@ -142,7 +138,7 @@
                             <div class="mt-4">
 <a href="index.html#tarefeh" class="btn btn-primary mt-4">مشاهده تعرفه ها</a>
 <a href="https://t.me/v2makers_admin" class="btn btn-primary mt-4">ارتباط با ما در تلگرام</a>
-<a href="https://t.me/v2makers_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
+<a href="https://t.me/v2makers2_bot" target="_blank" class="btn btn-primary mt-4">خرید از طریق ربات تلگرام</a>
 
 
                             </div>
